--- a/开发文档.md
+++ b/开发文档.md
@@ -123,3 +123,5 @@ git checkout -b 新分支 origin/新分支
 # step3 将该远程分支和本地分支合并
 git merge origin/新分支
 ```
+
+开发具体功能的时候新建**特征**分支来针对具体功能的开发,开发并测试完没问题以后再合并到dev分支,比如我现在和前端一起开发一个登录的功能，那我就可以创建一个登录的分支和前端开发一起协作
